// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupComplete renders correctly when social backup is complete 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "marginBottom": 20,
          },
          Object {},
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "height": 70,
            "width": 70,
          }
        }
      />
    </View>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 22,
          "marginTop": 20,
          "paddingBottom": 20,
          "paddingHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      backupComplete.2
    </Text>
  </View>
</SafeAreaView>
`;

exports[`BackupComplete renders correctly when social backup is not complete 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "marginBottom": 20,
          },
          Object {},
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "height": 70,
            "width": 70,
          }
        }
      />
    </View>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 22,
          "marginTop": 20,
          "paddingBottom": 20,
          "paddingHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      backupComplete.0
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 18,
          "paddingHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      backupComplete.1
    </Text>
  </View>
</SafeAreaView>
`;
